--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "express-session": "^1.17.3",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.3",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "xml2js": "^0.4.23"
   },
   "name": "p",
   "version": "1.0.0",
